refactor(component): migrate to Swiper.js

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@remixicon/react": "^4.9.0",
     "prettier": "^3.8.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "swiper": "^12.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
